# serializer version: 1
# name: TestPosterTemplate.test_topic_from_other_public_forum_in_topics_view[topic_from_other_public_forum_in_topics_view]
  '''
  <small class="text-muted poster-infos">
      Par :
              
                  
                  <a class="matomo-event" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="member" href="/members/profile/poster_username/">
                      Alan T.
                  </a>,
              
              
                  dans <a href="forum_url">Abby's Forum</a>,
      il y a 0 minute
      
  </small>
  '''
# ---
# name: TestPosterTemplate.test_topic_in_its_own_public_forum[topic_in_its_own_public_forum]
  '''
  <small class="text-muted poster-infos">
      Par :
              
                  
                  <a class="matomo-event" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="member" href="/members/profile/poster_username/">
                      Dermot T.
                  </a>,
      il y a 0 minute
      
  </small>
  '''
# ---
# name: TestPosterTemplate.test_topic_in_topics_view[topic_in_topics_view]
  '''
  <small class="text-muted poster-infos">
      Par :
              
                  
                  <a class="matomo-event" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="member" href="/members/profile/poster_username/">
                      Jeff B.
                  </a>,
      il y a 0 minute
      
  </small>
  '''
# ---
# name: TestTopicCreateCheckView.test_get_method[topic_create_check]
  '''
  <main class="s-main" id="main" role="main">
              
                  
              
              
              
      <section class="s-section" id="main_container">
          <div class="s-section__container container">
              
      <div class="row">
          <div class="col-12">
              <h1>forum</h1>
          </div>
      </div>
      <div class="row c-box">
          <div class="col-12 mb-5">
              <p class="h2">Quelle est ma situation ?</p>
          </div>
          <div class="col-12 col-md-4 mb-3">
              <div class="card c-card h-100">
                  <div class="card-header">
                      <h3 class="h4">J'utilise le site des emplois de l'inclusion</h3>
                  </div>
                  <div class="card-body pb-0">
                      <p>
                          J'ai des questions sur les PASS IAE, leur suspension ou prolongation, le fonctionnement du site des emplois de l'inclusion ou les relations avec l'ASP
                      </p>
                  </div>
                  <div class="card-footer text-center mt-3">
                      <a class="btn btn-primary matomo-event" data-matomo-action="topic-create-check" data-matomo-category="engagement" data-matomo-option="itou-helpdesk" href="https://aide.emplois.inclusion.beta.gouv.fr/hc/fr">J'accède à la documentation des emplois de l'inclusion</a>
                  </div>
              </div>
          </div>
          <div class="col-12 col-md-4 mb-3">
              <div class="card c-card h-100">
                  <div class="card-header">
                      <h3 class="h4">J'accueille des personnes en PMSMP</h3>
                  </div>
                  <div class="card-body pb-0">
                      <p>
                          J'ai une question Période de Mise en Situation en Milieu Professionnel, le conventionnement, la déclaration des heures ou le fonctionnement du site Immersion Facilitée
                      </p>
                  </div>
                  <div class="card-footer text-center">
                      <a class="btn btn-primary matomo-event" data-matomo-action="topic-create-check" data-matomo-category="engagement" data-matomo-option="pmsmp" href="https://aide.immersion-facile.beta.gouv.fr/fr/">
                          J'accède au centre d'aide Immersion Facilitée
                      </a>
                  </div>
              </div>
          </div>
          <div class="col-12 col-md-4 mb-3">
              <div class="card c-card h-100">
                  <div class="card-header">
                      <h3 class="h4">Je suis un/une professionnel/le de l'insertion, en formation ou en activité</h3>
                  </div>
                  <div class="card-body pb-0">
                      <p>
                          J'ai une question sur l'accompagnement d'une personne éloignée de l'emploi, sur mon parcours de formation ou sur une des fiches pratiques de la communauté
                      </p>
                  </div>
                  <div class="card-footer text-center">
                      <a class="btn btn-primary matomo-event" data-matomo-action="topic-create-check" data-matomo-category="engagement" data-matomo-option="forum" href="/forum/forum-[PK of Forum]/topic/create/?checked">Je pose ma question à la communauté</a>
                  </div>
              </div>
          </div>
      </div>
  
          </div>
      </section>
  
          </main>
  '''
# ---
# name: TestTopicCreateView.test_redirections_on_documentation_forum[topic_create]
  '''
  <div class="form-group" id="div_id_content">
      
          
              <label class="control-label" for="id_content">
                  Message
                  
              </label>
          
          
              <textarea class="form-control" cols="40" id="id_content" name="content" placeholder="Entrez votre message" required="" rows="10"></textarea>
          
      
      
      
      
          
              <small class="form-text text-muted">
      <a aria-controls="collapseMentionsHelp" aria-expanded="false" data-bs-toggle="collapse" href="#collapseMentionsHelp" role="button">mention d'informations</a>
      sur les champs libres
  </small>
  <div class="collapse" id="collapseMentionsHelp">
      <div class="mb-3">
          <p>
              Nous vous demandons de ne pas nous transmettre d’informations sensibles. Notamment, ne communiquez pas vos opinions philosophiques, syndicales, politiques ou sur votre vie sexuelle. Ces données sont trop personnelles !
          </p>
      </div>
  </div>
  
          
      
  </div>
  '''
# ---
# name: TestTopicCreateView.test_redirections_on_forum[topic_create]
  '''
  <div class="form-group" id="div_id_content">
      
          
              <label class="control-label" for="id_content">
                  Message
                  
              </label>
          
          
              <textarea class="form-control" cols="40" id="id_content" name="content" placeholder="Entrez votre message" required="" rows="10"></textarea>
          
      
      
      
      
          
              <small class="form-text text-muted">
      <a aria-controls="collapseMentionsHelp" aria-expanded="false" data-bs-toggle="collapse" href="#collapseMentionsHelp" role="button">mention d'informations</a>
      sur les champs libres
  </small>
  <div class="collapse" id="collapseMentionsHelp">
      <div class="mb-3">
          <p>
              Nous vous demandons de ne pas nous transmettre d’informations sensibles. Notamment, ne communiquez pas vos opinions philosophiques, syndicales, politiques ou sur votre vie sexuelle. Ces données sont trop personnelles !
          </p>
      </div>
  </div>
  
          
      
  </div>
  '''
# ---
# name: TestTopicListView.test_clickable_tags[10-query_param1-clickable_tags_page2][clickable_tags_page2]
  '<button class="tag bg-info-lighter text-info matomo-event" data-matomo-action="filter" data-matomo-category="engagement" data-matomo-option="topics" hx-get="/topics/?tag=tag&amp;filter=ALL" hx-push-url="true" hx-swap="outerHTML" hx-target="#topicsarea" id="filtertopics-button">tag</button>'
# ---
# name: TestTopicListView.test_clickable_tags[None-query_param0-clickable_tags_page1][clickable_tags_page1]
  '<button class="tag bg-info-lighter text-info matomo-event" data-matomo-action="filter" data-matomo-category="engagement" data-matomo-option="topics" hx-get="/topics/?tag=tag&amp;filter=ALL" hx-push-url="true" hx-swap="outerHTML" hx-target="#topicsarea" id="filtertopics-button">tag</button>'
# ---
# name: TestTopicListView.test_filter_dropdown_with_tags[filter_dropdown_with_tags]
  '''
  <div class="dropdown-menu dropdown-menu-end" id="filterTopicsDropdown">
                          <ul class="list-unstyled">
                              
                                  <li>
                                      <button class="dropdown-item matomo-event" data-matomo-action="filter" data-matomo-category="engagement" data-matomo-option="topics" hx-get="/topics/?filter=ALL&amp;tag=tag" hx-push-url="true" hx-swap="outerHTML" hx-target="#topicsarea" id="filter-ontag-button">les plus récentes</button>
                                  </li>
                              
                                  <li>
                                      <button class="dropdown-item matomo-event" data-matomo-action="filter" data-matomo-category="engagement" data-matomo-option="topics" hx-get="/topics/?filter=NEW&amp;tag=tag" hx-push-url="true" hx-swap="outerHTML" hx-target="#topicsarea" id="filter-ontag-button">en attente de réponse</button>
                                  </li>
                              
                                  <li>
                                      <button class="dropdown-item matomo-event" data-matomo-action="filter" data-matomo-category="engagement" data-matomo-option="topics" hx-get="/topics/?filter=CERTIFIED&amp;tag=tag" hx-push-url="true" hx-swap="outerHTML" hx-target="#topicsarea" id="filter-ontag-button">avec une réponse certifiée</button>
                                  </li>
                              
                          </ul>
                      </div>
  '''
# ---
# name: TestTopicListView.test_queryset_on_filter[ALL-<lambda>-None][ALL-tagged_topics]
  '''
  <div class="flex-grow-1" id="topic-list-filter-header">
                      <span class="h5 m-0">2 questions</span>
                      les plus récentes
                      
                  </div>
  '''
# ---
# name: TestTopicListView.test_queryset_on_filter[CERTIFIED-<lambda>-<lambda>][CERTIFIED-tagged_topics]
  '''
  <div class="flex-grow-1" id="topic-list-filter-header">
                      <span class="h5 m-0">1 question</span>
                      avec une réponse certifiée
                      
                  </div>
  '''
# ---
# name: TestTopicListView.test_queryset_on_filter[NEW-<lambda>-<lambda>][NEW-tagged_topics]
  '''
  <div class="flex-grow-1" id="topic-list-filter-header">
                      <span class="h5 m-0">2 questions</span>
                      en attente de réponse
                      
                  </div>
  '''
# ---
# name: TestTopicListView.test_queryset_on_tag[-<lambda>-None][-tagged_topics]
  '''
  <div class="flex-grow-1" id="topic-list-filter-header">
                      <span class="h5 m-0">2 questions</span>
                      les plus récentes
                      
                  </div>
  '''
# ---
# name: TestTopicListView.test_queryset_on_tag[buckley-<lambda>-<lambda>][buckley-tagged_topics]
  '''
  <div class="flex-grow-1" id="topic-list-filter-header">
                      <span class="h5 m-0">1 question</span>
                      les plus récentes
                      
                          <span class="fs-sm">
                              sous l'étiquette
                              <button aria-label="Supprimer ce filtre" class="tag bg-info text-white matomo-event" data-bs-placement="top" data-bs-title="Supprimer ce filtre" data-bs-toggle="tooltip" data-matomo-action="unfilter" data-matomo-category="engagement" data-matomo-option="topics" hx-get="/topics/?filter=ALL" hx-push-url="true" hx-swap="outerHTML" hx-target="#topicsarea" id="unfilter-ontag-button">
                                  <i class="ri-close-fill ri-xs"></i>buckley
                              </button>
                          </span>
                      
                  </div>
  '''
# ---
# name: TestTopicListView.test_queryset_on_tag[tag-<lambda>-<lambda>][tag-tagged_topics]
  '''
  <div class="flex-grow-1" id="topic-list-filter-header">
                      <span class="h5 m-0">2 questions</span>
                      les plus récentes
                      
                          <span class="fs-sm">
                              sous l'étiquette
                              <button aria-label="Supprimer ce filtre" class="tag bg-info text-white matomo-event" data-bs-placement="top" data-bs-title="Supprimer ce filtre" data-bs-toggle="tooltip" data-matomo-action="unfilter" data-matomo-category="engagement" data-matomo-option="topics" hx-get="/topics/?filter=ALL" hx-push-url="true" hx-swap="outerHTML" hx-target="#topicsarea" id="unfilter-ontag-button">
                                  <i class="ri-close-fill ri-xs"></i>tag
                              </button>
                          </span>
                      
                  </div>
  '''
# ---
# name: test_breadcrumbs_on_topic_view[discussion_area_topic]
  '''
  <nav aria-label="Fil d'ariane" class="c-breadcrumb">
          <ol class="breadcrumb">
              <li class="breadcrumb-item">Retourner vers</li>
              <li class="breadcrumb-item">
                  
                      <a class="matomo-event" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="topics_breadcrumb" href="/topics/">Espace d'échanges</a>
                  
              </li>
              
                  
              
              
                  <li class="breadcrumb-item">
                      <a class="matomo-event" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="forum" href="/forum/forum-b-[PK of Forum]/">Forum B</a>
                  </li>
              
          </ol>
      </nav>
  '''
# ---
# name: test_breadcrumbs_on_topic_view[discussion_area_toplevel_topic]
  '''
  <nav aria-label="Fil d'ariane" class="c-breadcrumb">
          <ol class="breadcrumb">
              <li class="breadcrumb-item">Retourner vers</li>
              <li class="breadcrumb-item">
                  
                      <a class="matomo-event" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="topics_breadcrumb" href="/topics/">Espace d'échanges</a>
                  
              </li>
              
              
          </ol>
      </nav>
  '''
# ---
# name: test_breadcrumbs_on_topic_view[documentation_topic]
  '''
  <nav aria-label="Fil d'ariane" class="c-breadcrumb">
          <ol class="breadcrumb">
              <li class="breadcrumb-item">Retourner vers</li>
              <li class="breadcrumb-item">
                  
                      <a class="matomo-event" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="documentation_breadcrumb" href="#">Documentation</a>
                  
              </li>
              
                  
                      <li class="breadcrumb-item">
                          <a class="matomo-event" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="forum" href="/forum/d-category-[PK of Forum]/">D Category</a>
                      </li>
                  
              
              
                  <li class="breadcrumb-item">
                      <a class="matomo-event" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="forum" href="/forum/d-category-forum-[PK of Forum]/">D Category - Forum</a>
                  </li>
              
          </ol>
      </nav>
  '''
# ---
